Fixed broken tests and created a couple new tests